# ahoi-ping-pong

./: CMakeLists.txt  config.cmake
app/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/: core.h
src/core/src/: core.c
